@@ -17,7 +17,7 @@
 <div style="padding:15px">
 <roundcube:object name="userprefs">
 
-<p><br /><roundcube:button command="save" type="input" class="button" label="save" /></p>
+<p><roundcube:button command="save" type="input" class="button" label="save" /></p>
 </div>
 </div>
 
